# Weunix-JLevcDormroom

./: .gitignore  LICENSE  README.md  config_helpers.py  latest.json  rate_limit.py  requirements.txt  secret_store.py  test_all.py  test_flow.py  weunix_backend.spec  weunix_core.py  使用说明.txt
desktop/: backend_api.py
desktop/gui/: index.html  package-lock.json  package.json  tailwind.config.ts
desktop/gui/src/: App.tsx  api.ts  styles.css  types.ts
desktop/gui/src-tauri/: Cargo.toml  tauri.conf.json
desktop/gui/src-tauri/capabilities/: default.json
desktop/gui/src-tauri/resources/: room_helpers.py
desktop/gui/src-tauri/src/: lib.rs  main.rs
docs/: WeUnix_使用说明书.md  update-release.md
scripts/: make-latest-json.ps1
tests/: test_config_helpers.py  test_rate_limit.py  test_rehearsal_engine.py  test_room_helpers.py  test_secret_store.py
