[package]
name = "weunix-desktop"
version = "0.2.0"
description = "Weunix desktop control console"
authors = ["Kismet"]
edition = "2021"

[lib]
name = "weunix_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
